<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TV Thailand</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="favorite">Favorite</string>
    <string name="recently">Recently</string>
    <string name="episode">Episode : %1$s</string>
    <string name="aired">Aired : %1$s</string>

    <string-array name="sections">
        <item>CATEGORIES</item>
        <item>CHANNELS</item>
        <item>RADIOS</item>
    </string-array>

    <string name="parts">parts</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="views">views</string>
    <!-- Facebook String -->
    <string name="app_id">202355306578303</string>
    <string name="get_started_facebook">To get started, log in using Facebook</string>
    <string name="get_started">To get TV Thailand, please </string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="open_with">Open With</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="this_channel_not_available">This Channel not Available</string>
    <string name="search_program_hint">Search Title</string>
    <string name="loading">Loading &#8230;</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="information">Information</string>
    <string name="warning">Warning !!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="default_status" />
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="greeting_status">Welcome, %s.</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="signed_in_status">Signed in.</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="forgot_your_password_no_Underline">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="login_with_email">Login with Email</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="telephone_no">Telephone No.</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="birthday">Birthday</string>
    <string name="pick_birthday">Pick Birthday</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="length_is_too_short_1">%1$s length is too short. Please enter atleast one characters.</string>
    <string name="length_is_too_short_6">%1$s length is too short. Please enter atleast six characters.</string>
    <string name="length_is_too_short_10">%1$s length is too short. Please enter atleast ten characters.</string>
    <string name="email_does_not_match">Email does not match.</string>
    <string name="member_id_1_s">Member ID : %1$s</string>
    <string name="username_1_s">Username : %1$s</string>
    <string name="firstname_1_s">Firstname : %1$s</string>
    <string name="lastname_1_s">Lastname : %1$s</string>
    <string name="name_1_s">Name : %1$s</string>
    <string name="birthday_1_s">Birthday : %1$s</string>
    <string name="email_1_s">Email : %1$s</string>
    <string name="my_profile">My Profile</string>
    <string name="credit_1_s">Credit : %1$s Point(s)</string>
    <string name="log_out">Log out</string>
    <string name="more_detail">More Detail</string>
    <string name="wishlist">Wish List</string>
    <string name="member_id">Member ID : </string>
    <string name="trailer">Trailer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sorry_this_url_isn_t_available">Sorry, this url isn\'t available</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="message_fill_otp">OTP Code will sent to your email and SMS</string>
    <string name="preview">Preview</string>
    <string name="add_to_wishlist">Add to Wish List</string>
    <string name="remove">Remove</string>
    <string name="purchased">Purchased</string>
    <string name="live">Live</string>
    <string name="status">Status</string>
    <string name="play">Play</string>
    <string name="cloudmedia">Cloud Media</string>
    <string name="please_sign_up_to_cloudmedia">Please sign to Cloud Media</string>
    <string name="dont_worry">Don\'t worry, we\'ll never post to your wall without asking you first</string>
    <string name="welcome_">"Welcome, "</string>
    <string name="user">User</string>
    <string name="welcome_slogan_message">Watching limitless with TV Thailand</string>
    <string name="no_content">No Content</string>
    <string name="help">Help</string>
    <string name="part">Part</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="about">About</string>
    
    <string name="opt_code">OPT Code</string>
    
    <string name="please_input_email_address">Please input email address</string>
    <string name="please_input_telephone_number">Please input Telephone number</string>
    <string name="update_profile_success">Update profile success!</string>
    <string name="dismiss">Dismiss</string>
    
    <string name="password_must_have_more_than_4_characters">Password must have more than 4 characters</string>
    <string name="telephone">Telephone</string>
    <string name="telephone_number">Telephone number</string>
    
    <string name="password_does_not_mactch_please_type_again">Password does not mactch. please type again</string>
    <string name="watch_live">LIVE</string>
    <string name="cm_account">Account</string>
    <string name="add_credit">เติม Point</string>
    <string name="true_money_topup">เติม True Money</string>
    <string name="beta_version">beta version</string>
    <string name="real_copyright">ลิขสิทธิ์แท้</string>
    <string name="old_password">รหัสผ่านเดิม :</string>
    <string name="new_password">รหัสผ่านใหม่ :</string>
    <string name="confirm_new_password">ยืนยันรหัสผ่านใหม่ :</string>
    <string name="change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="edit_profile">แก้ไขข้อมูลส่วนตัว</string>
    <string name="change_password_success">เปลี่ยนรหัสผ่านสำเร็จ</string>
    <string name="firstname_">ชื่อ :</string>
    <string name="lastname_">นามสกุล :</string>
    <string name="birthday_">วันเกิด :</string>
    <string name="gender_">เพศ :</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="telephone_">โทร. :</string>
    <string name="email_">Email :</string>
    <string name="update_profile">Update Profile</string>
    <string name="request_otp">ขอรหัส OTP</string>
    <string name="otp_is_incorrect">รหัส OTP ไม่ถูกต้อง</string>
    <string name="please_request_otp">กรุณาขอรหัส OTP</string>
    <string name="unknown_person">Unknown</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="skip_"><![CDATA[Skip >>]]></string>
    <string name="website_contact">Website : https://www.facebook.com/TV.Thailand</string>
    <string name="email_contact">Email : makathon.labs@gmail.com</string>
    <string name="drama_ch7">ละครช่อง 7</string>
    <string name="drama_ch7_url">http://www.otv.co.th/api/index.php/Ch7/drama</string>


    <string name="request_ad">Req. Ad</string>
    <string name="language">Language</string>
    <string name="companionPlaceholder">Companion Slot</string>
    <string name="leaderboardCompanionPlaceholder">Leaderboard Companion Slot</string>
    <string-array name="default_ad_tag_labels">
        <item>Instream 1</item>
        <item>Instream 2</item>
        <item>AdSense skippable</item>
        <item>Wrapper</item>
        <item>Ads List</item>
        <item>Custom Tag</item>
    </string-array>
    <string-array name="default_ad_tags">
        <item><![CDATA[http://th-otv.videoplaza.tv/proxy/distributor/v2?s=147b5982-ee47-483a-8150-7c435731ea7d&tt=p&rt=vast_2.0&rnd={random}&xgid=792be049-b06b-44e0-8b95-6d4a8183d229&pf=fl_11]]></item>
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=%2F6062%2Fhanna_MA_group%2Fvideo_m3u8&ciu_szs=&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&m_ast=vast&url=[referrer_url]&correlator=[timestamp]]]></item>
        <item><![CDATA[http://googleads.g.doubleclick.net/pagead/ads?eid=41351061&ad_type=skippablevideo&client=ca-video-pub-4975756195050566&videoad_start_delay=0&description_url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DSS7HCA9U0hQ&max_ad_duration=60000]]></item>
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=400x300&iu=%2F6062%2Fhanna_MA_group%2Fwrapper_with_comp&ciu_szs=728x90&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&m_ast=vast&url=[referrer_url]&correlator=[timestamp]]]></item>
        <item><![CDATA[http://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=%2F15018773%2Feverything2&ciu_szs=300x250%2C468x60%2C728x90&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&url=[referrer_url]&correlator=[timestamp]&cmsid=133&vid=10XWSh7W4so&ad_rule=1]]></item>
    </string-array>
</resources>
