<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <com.codemobi.android.tvthailand.TouchImageView
        android:id="@+id/iv_largThumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="bottom"
            android:text="@string/description"
            android:textColor="#FFFFFF" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="#22000000" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imb_add_to_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_fav"
            android:contentDescription="@string/add_to_favorite"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_more_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_more_detail"
            android:contentDescription="@string/more_detail"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>